--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://d3js.org/d3.v5.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="populateDemogaphics(this.value)">
+          <select id="selDataset" onchange="optionChanged(this.value)">
           <option>--Select--</option>
           </select>
         </div>
@@ -32,7 +33,7 @@
           <div class="panel-heading">
             <h3 class="panel-title">Demographic Info</h3>
           </div>
-          <div id="sample-metadata" class="panel-body">something</div>
+          <div id="sample-metadata" class="panel-body">  </div>
         </div>
       </div>
       <div class="col-md-5">
@@ -53,7 +54,7 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="./static/js/app.js"></script>
   <!--<script src="./static/js/bonus.js"></script>-->
-  <script src="samples.json"></script>
+  <!--<script src="samples.json"></script>--!>
   
 </body>
 
